# annum-tab

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  hello.py  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: bandit.yml  codeql.yml
data/: Untitled.ipynb  download.sh  extract.sh
docs/: basemodel.html  index.html  model2.html  prototype.html
models/: basemodel.py  model.py  model2.py  model3.py  testmodel.py
notebooks/: basemodel.ipynb  math  model.ipynb  model2.ipynb  notebook.ipynb  prototype.ipynb  testbsd.ipynb  testjax.ipynb  testnumpy.ipynb  testuv.ipynb  testvenv.ipynb
src/annum_tab/tests/: jax.py  keras.py  pip.py  test.py  venv.py
tests/: test_dependencies.py  test_environmet.py
