[project]
name = "annum-tab"
version = "0.1.0"
description = "Machine learning, NLP, and symbolic reasoning in mathematics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.1",
    "jupytext>=1.17.2",
    "keras>=3.10.0",
    "matplotlib>=3.10.3",
    "nbconvert>=7.16.6",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tree>=0.2.4",
]
